Chunk 추가 및 tsconfig 수정
tsconfig
 - javascript use strict 추가
 - js 파일 에러체크

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
         "target": "es6",
         "noImplicitAny": false,
         "removeComments": false,
-        "preserveConstEnums": true,
         "sourceMap": false,
+        "alwaysStrict": true,
+        "checkJs": true,
     },
 }
